Add Select2.js to main_template, add related CSS

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1,6 +1,7 @@
 $fontAwesomePath: "/++genweb++static/fonts";
 @import "compass_twitter_bootstrap/font-awesome";
 @import "token-input-facebook";
+@import "select2";
 @import "maxui";
 @import "overrides";
 @import "hidden";
