--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -720,3 +720,16 @@ label[for="form.ext_editor"] ~ div.widget {
 .template-homepage #maxui-newactivity {
   display: none;
 }
+
+.directori_usuari_foto {
+  width: 21%;
+  margin: 2%;
+  float: left;
+  height: 100px;
+  overflow-y: hidden;
+
+  img {
+    width: 100%;
+  }
+
+}
