--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3115,11 +3115,9 @@ input[type="text"]:focus {
   *background-color: #003bb3; }
 
 #communitylist {
-  padding: 10px;
   font-size: 13px;
   color: #555;
-  text-shadow: 1px 1px 0px white;
-  background: #f9f9f9; }
+  text-shadow: 1px 1px 0px white; }
   #communitylist .eines {
     color: #34495E;
     font-size: 18px;
@@ -3180,36 +3178,19 @@ input[type="text"]:focus {
 .template-communities #content {
   background-color: white; }
 
-#searchcommunities {
-  margin-right: auto;
-  margin-left: auto;
-  width: 300px;
-  padding-top: 10px; }
-  #searchcommunities .searchInput {
-    height: 25px;
-    font-size: 20px;
-    line-height: 25px;
-    width: 260px; }
-  #searchcommunities .add-on {
-    background-color: white;
-    border: none;
-    font-size: 20px;
-    position: relative;
-    right: 34px;
-    top: 2px;
-    z-index: 10; }
+#communitysearch h2 {
+  float: left;
+  padding-left: 10px; }
 
-#searchusers {
-  margin-right: auto;
+#searchinputcommunities, #searchusers {
   margin-left: auto;
   width: 300px;
-  padding-top: 10px; }
-  #searchusers .searchInput {
-    height: 25px;
-    font-size: 20px;
-    line-height: 25px;
-    width: 260px; }
-  #searchusers .add-on {
+  padding-top: 4px; }
+  #searchinputcommunities .searchInput, #searchusers .searchInput {
+    height: 20px;
+    font-size: 13px;
+    width: 280px; }
+  #searchinputcommunities .add-on, #searchusers .add-on {
     background-color: white;
     border: none;
     font-size: 20px;
