--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3282,7 +3282,8 @@ input[type="text"]:focus {
   background-color: #deded6;
   font-weight: bold; }
 #box_stats ul {
-  margin-top: 5px; }
+  margin-top: 5px;
+  margin-left: 0px; }
 #box_stats li {
   margin-bottom: 5px; }
 
@@ -3334,6 +3335,9 @@ input[type="text"]:focus {
 
 #box_thinkers.ulearnbox {
   padding: 5px 5px 10px 10px; }
+
+#box_thinkers i {
+  margin-right: 3px; }
 
 label[for="form.ext_editor"] ~ div.widget {
   display: none; }
