--- a/ulearn/theme/scss/dynamic.scss
+++ b/ulearn/theme/scss/dynamic.scss
@@ -170,8 +170,19 @@ h1, h2, h3, label {
   a.maxui-action.maxui-likes.maxui-liked:before {
     color: $secondary-color;
   }
+  a.maxui-action.maxui-likes.maxui-liked:hover:before {
+    color: #3B5998;
+  }
   a.maxui-action.maxui-favorites.maxui-favorited,
   a.maxui-action.maxui-favorites.maxui-favorited:before {
     color: $secondary-color;
+  }
+  a.maxui-action.maxui-commentaction {
+    color: $secondary-color;
+  }
+  a.maxui-action.maxui-favorites.maxui-favorited:hover,
+  a.maxui-action.maxui-likes.maxui-liked:hover,
+  a.maxui-action.maxui-commentaction:hover {
+    color: #444;
   }
 }
