Calendar migrated to p.a.event one

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -403,7 +403,11 @@ border-color: #34495E;
 
 .weekdays {font-size:11px;}
 .ploneCalendar {width:100%;font-size:13px;}
+.portletCalendar .ploneCalendar {font-size:13px;}
 .event { background-color: #384e65; text-shadow:none; border-right: 1px solid white; }
+.cal_has_events { background-color: #384e65; text-shadow:none; }
+.cal_prev_month, .cal_next_month { opacity: 0.5; }
+.today { font-weight: bold; }
 // .event:hover { background:#fff; }
 .todayevent{ background:#f58d3d; text-shadow:none; text-align:center; border-right: 1px solid white; }
 .event a { color: white; font-weight:normal; }
