--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -129,7 +129,8 @@ border-color: #34495E;
   margin-bottom:20px;
   box-shadow: -1px 1px 2px #ddd;
 
-  ul:last-child {
+  ul:last-child,
+  p:last-child {
     margin-bottom: 0px;
   }
 }
@@ -386,7 +387,7 @@ border-color: #34495E;
     a { padding: 10px 0}
     i { margin-right: 3px; }
   }
-  ul { list-style: none; margin-left:25px; margin-top: 10px; }
+  ul { list-style: none; margin: 10px 0 0 0; }
   li {
     border-bottom: 1px solid #EEEEEE;
     font-size: 13px;
@@ -394,7 +395,7 @@ border-color: #34495E;
     margin-bottom: 8px;
     padding-bottom: 8px;
     a {
-      // color: #333;
+      padding-left: 10px;
     }
 
     i { color: #34495E; }
@@ -404,8 +405,13 @@ border-color: #34495E;
 .weekdays {font-size:11px;}
 .ploneCalendar {width:100%;font-size:13px;}
 .portletCalendar .ploneCalendar {font-size:13px;}
+.portletCalendar .portletHeader { text-align: center; font-size: 14px; }
 .event { background-color: #384e65; text-shadow:none; border-right: 1px solid white; }
-.cal_has_events { background-color: #384e65; text-shadow:none; }
+.cal_has_events {
+  background-color: #384e65;
+  text-shadow:none;
+  .popover-content a { display: block; }
+}
 .cal_prev_month, .cal_next_month { opacity: 0.5; }
 .today { font-weight: bold; }
 // .event:hover { background:#fff; }
