--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -406,7 +406,7 @@ border-color: #34495E;
 .ploneCalendar {width:100%;font-size:13px;}
 .portletCalendar .ploneCalendar {font-size:13px;}
 .portletCalendar .portletHeader { text-align: center; font-size: 14px; }
-.event { background-color: #384e65; text-shadow:none; border-right: 1px solid white; }
+// .event { background-color: #384e65; text-shadow:none; border-right: 1px solid white; }
 .cal_has_events {
   background-color: #384e65;
   text-shadow:none;
@@ -416,7 +416,7 @@ border-color: #34495E;
 .today { font-weight: bold; }
 // .event:hover { background:#fff; }
 .todayevent{ background:#f58d3d; text-shadow:none; text-align:center; border-right: 1px solid white; }
-.event a { color: white; font-weight:normal; }
+// .event a { color: white; font-weight:normal; }
 .todayevent a { color:#fff; }
 
 
