--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -7,6 +7,7 @@ $fontAwesomePath: "/++genweb++static/fonts";
 @import "hidden";
 @import "arrows";
 @import "login";
+@import "templates";
 @import "plugins";
 // @import "genwebupc";
 
@@ -80,8 +81,21 @@ a:hover, a:active {
     margin-top: 25px;
     .typeahead {z-index: 1011;}
     .typeahead li a {font-size: 13px;}
+    .add-on {
+      color: #888888;
+      background-color: white;
+      border: none;
+      font-size: 15px;
+      position: relative;
+      right: 28px;
+      top: 2px;
+      z-index: 10;
+      padding:2px;
+    }
   }
 }
+
+#eines input.cercaupc { width: 134px !important; }
 
 .dropdown-menu a {
   text-decoration:none;
@@ -551,7 +565,7 @@ border-color: #34495E;
 #searchinputcommunities, #searchinputusers {
   // margin-right: auto;
   margin-left: auto;
-  width: 300px;
+  width: 290px;
   padding-top: 10px;
 
   .searchInput {
@@ -569,8 +583,8 @@ border-color: #34495E;
     border: none;
     font-size: 15px;
     position: relative;
-    right: 34px;
-    top: 1px;
+    right: 28px;
+    top: 2px;
     z-index: 10;
     padding:2px;
   }
@@ -669,6 +683,7 @@ border-color: #34495E;
     padding: 5px 0 5px 78px;
     background-color: #deded6;
     font-weight: bold;
+    text-transform: capitalize;
   }
   ul { margin-top: 5px; margin-left: 0px; list-style: none;}
   li {
