--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1522,7 +1522,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
   font-size: 1px;
   text-decoration: none;
   border: 0;
-  background: url('/++genweb++static/images/select2.png?1389192327') right top no-repeat;
+  background: url('/++genweb++static/images/select2.png?1383549768') right top no-repeat;
   cursor: pointer;
   outline: 0; }
 
@@ -1607,7 +1607,7 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
   display: block;
   width: 100%;
   height: 100%;
-  background: url('/++genweb++static/images/select2.png?1389192327') no-repeat 0 1px; }
+  background: url('/++genweb++static/images/select2.png?1383549768') no-repeat 0 1px; }
 
 .select2-search {
   display: inline-block;
@@ -1633,21 +1633,21 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
   border-radius: 0;
   -webkit-box-shadow: none;
   box-shadow: none;
-  background: white url('/++genweb++static/images/select2.png?1389192327') no-repeat 100% -22px;
-  background: url('/++genweb++static/images/select2.png?1389192327') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-  background: url('/++genweb++static/images/select2.png?1389192327') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/++genweb++static/images/select2.png?1389192327') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/++genweb++static/images/select2.png?1389192327') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%); }
+  background: white url('/++genweb++static/images/select2.png?1383549768') no-repeat 100% -22px;
+  background: url('/++genweb++static/images/select2.png?1383549768') no-repeat 100% -22px, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+  background: url('/++genweb++static/images/select2.png?1383549768') no-repeat 100% -22px, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/++genweb++static/images/select2.png?1383549768') no-repeat 100% -22px, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/++genweb++static/images/select2.png?1383549768') no-repeat 100% -22px, linear-gradient(top, #ffffff 85%, #eeeeee 99%); }
 
 .select2-drop.select2-drop-above .select2-search input {
   margin-top: 4px; }
 
 .select2-search input.select2-active {
-  background: white url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%;
-  background: url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
-  background: url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
-  background: url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%); }
+  background: white url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%;
+  background: url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%, -webkit-gradient(linear, left bottom, left top, color-stop(0.85, white), color-stop(0.99, #eeeeee));
+  background: url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%, -webkit-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%, -moz-linear-gradient(center bottom, white 85%, #eeeeee 99%);
+  background: url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%, linear-gradient(top, #ffffff 85%, #eeeeee 99%); }
 
 .select2-container-active .select2-choice,
 .select2-container-active .select2-choices {
@@ -1780,7 +1780,7 @@ disabled look for disabled choices in the results dropdown
   display: none; }
 
 .select2-more-results.select2-active {
-  background: #f4f4f4 url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100%; }
+  background: #f4f4f4 url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100%; }
 
 .select2-more-results {
   background: #f4f4f4;
@@ -1851,7 +1851,7 @@ disabled look for disabled choices in the results dropdown
   background: transparent !important; }
 
 .select2-container-multi .select2-choices .select2-search-field input.select2-active {
-  background: white url('/++genweb++static/images/select2-spinner.gif?1389192327') no-repeat 100% !important; }
+  background: white url('/++genweb++static/images/select2-spinner.gif?1383549768') no-repeat 100% !important; }
 
 .select2-default {
   color: #999 !important; }
@@ -1895,7 +1895,7 @@ disabled look for disabled choices in the results dropdown
   top: 4px;
   font-size: 1px;
   outline: none;
-  background: url('/++genweb++static/images/select2.png?1389192327') right top no-repeat; }
+  background: url('/++genweb++static/images/select2.png?1383549768') right top no-repeat; }
 
 .select2-container-multi .select2-search-choice-close {
   left: 3px; }
@@ -1955,7 +1955,7 @@ disabled look for disabled choices in the results dropdown
 /* Retina-ize icons */
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5), only screen and (min-resolution: 144dpi) {
   .select2-search input, .select2-search-choice-close, .select2-container .select2-choice abbr, .select2-container .select2-choice .select2-arrow b {
-    background-image: url('/++genweb++static/images/select2x2.png?1389192327') !important;
+    background-image: url('/++genweb++static/images/select2x2.png?1383549768') !important;
     background-repeat: no-repeat !important;
     background-size: 60px 40px !important; }
 
@@ -2331,6 +2331,13 @@ li > .noMenuAction {
   text-align: center;
   margin-bottom: 20px; }
 
+.template-event .day, .template-event .hour, .template-event .minute, .template-event .second {
+  width: 50px; }
+.template-event .year {
+  width: 60px; }
+.template-event .month {
+  width: 100px; }
+
 .alertify,
 .alertify-show,
 .alertify-log {
@@ -2656,6 +2663,19 @@ a:hover, a:active {
       z-index: 1011; }
     .masthead #eines .typeahead li a {
       font-size: 13px; }
+    .masthead #eines .add-on {
+      color: #888888;
+      background-color: white;
+      border: none;
+      font-size: 15px;
+      position: relative;
+      right: 28px;
+      top: 2px;
+      z-index: 10;
+      padding: 2px; }
+
+#eines input.cercaupc {
+  width: 134px !important; }
 
 .dropdown-menu a {
   text-decoration: none; }
@@ -3071,7 +3091,7 @@ input[type="text"]:focus {
 
 #searchinputcommunities, #searchinputusers {
   margin-left: auto;
-  width: 300px;
+  width: 290px;
   padding-top: 10px; }
   #searchinputcommunities .searchInput, #searchinputusers .searchInput {
     height: 20px;
@@ -3085,8 +3105,8 @@ input[type="text"]:focus {
     border: none;
     font-size: 15px;
     position: relative;
-    right: 34px;
-    top: 1px;
+    right: 28px;
+    top: 2px;
     z-index: 10;
     padding: 2px; }
 
@@ -3167,7 +3187,8 @@ input[type="text"]:focus {
   margin: 0;
   padding: 5px 0 5px 78px;
   background-color: #deded6;
-  font-weight: bold; }
+  font-weight: bold;
+  text-transform: capitalize; }
 #box_stats ul {
   margin-top: 5px;
   margin-left: 0px;
