--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2145,19 +2145,20 @@ h1, h2, h3, label {
 
 #portal-header .container {
   border-top: 0 none;
-  margin-bottom: 15px;
   margin-top: 0;
   border-bottom: 0; }
+
+#portal-breadcrumbs {
+  margin-bottom: 6px; }
+
+#portal-breadcrumbs + #content-area {
+  margin-top: 0px; }
 
 #content-area {
   margin-top: 1.7em; }
 
 [class*="span"], .cella {
   margin-bottom: 0; }
-
-#portal-breadcrumbs {
-  margin-bottom: -15px;
-  margin-top: -15px; }
 
 .template-homepage #portal-breadcrumbs {
   margin-bottom: 0;
@@ -2610,6 +2611,17 @@ li > .noMenuAction {
   color: #468847;
   background: #DFF0D8;
   border: 1px solid #D6E9C6; }
+
+.lt-ie9 .box_badges {
+  margin-right: 5px; }
+
+.lt-ie9 .thinnker {
+  float: left;
+  display: block;
+  width: 44px; }
+
+.lt-ie9 #userlist .photo img {
+  height: 79px; }
 
 body {
   background: #eae9e4;
