Afegit css per header gebropharma

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -827,3 +827,17 @@ label[for="form.ext_editor"] ~ div.widget {
     #tagslist img:hover {
       transition: all 0.25s ease 0s;
       border: 2px solid #F58D3D; }
+
+//CSS per gebropharma
+
+.gebropharma-accessos-directes {
+  margin-top: 7px;
+}
+
+.gebropharma-biblioteca {
+  margin-right: 10px;
+}
+
+.gebropharma-campus {
+  margin-right: 50px;
+}
