Fix firefox breadcrumb

--- a/ulearn/theme/scss/_overrides.scss
+++ b/ulearn/theme/scss/_overrides.scss
@@ -57,6 +57,7 @@ h1, h2, h3, label {
 }
 #portal-breadcrumbs {
   margin-bottom: 6px;
+  clear: both;
 }
 #portal-breadcrumbs + #content-area {
   margin-top: 0px;
