--- a/ulearn/theme/scss/_hidden.scss
+++ b/ulearn/theme/scss/_hidden.scss
@@ -9,3 +9,6 @@ li > .noMenuAction {display: none}
 // Amagar afegir tipus
 // Reposat JO dixit
 // li > a#plone-contentmenu-factories {display: none}
+
+// Amagar check de validar el mail
+#formfield-form-mail_me {display: none;}
