--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -2204,6 +2204,9 @@ li > .noMenuAction {
 .section-Members li > a#plone-contentmenu-workflow {
   display: block; }
 
+#formfield-form-mail_me {
+  display: none; }
+
 .bubble {
   position: relative;
   top: 0;
