Update some CSS for not customize MAXUI any more

--- a/ulearn/theme/scss/dynamic.scss
+++ b/ulearn/theme/scss/dynamic.scss
@@ -154,7 +154,7 @@ input.maxui-button {
 #maxui-newactivity {
   background: none repeat scroll 0 0 $maxui-form-bg;
 }
-#maxui-search { background: none repeat scroll 0 0 #f7f7f7; }
+// #maxui-search { background: none repeat scroll 0 0 #f7f7f7; }
 
 #maxui-more-activities input.maxui-button {
   color: $secondary-color;
