--- a/ulearn/theme/scss/dynamic.scss
+++ b/ulearn/theme/scss/dynamic.scss
@@ -161,7 +161,7 @@ input.maxui-button {
 }
 
 // OVERRIDES
-h1, h2, h3, label, span.label {
+h1, h2, h3, label, span.label, fieldset legend {
   color: $secondary-color;
 }
 
