--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1008,21 +1008,29 @@ label[for="form.ext_editor"] ~ div.widget {
 }
 
 #box_discussion {
-  .newevent { margin-top: 15px;
-    a { padding: 10px 0}
+  .cimage img {
+    width: 40px;
+    height: 40px;
+    @include border-radius(50%);
+    float: right;
+    vertical-align: top;
+    margin-right: 10px;
+  }
+  ul.lastdiscussion {
+    list-style: none;
+    margin: 0;
+    li {
+      padding-bottom: 10px;
+    }
+  }
+  p {
+    margin-top: 0;
+    border-top: 1px solid #EEEEEE;
+    a { margin-top: 10px; padding:10px 0}
     i { margin-right: 3px; }
   }
-  // ul { list-style: none; margin: 10px 0 0 0; }
-  li {
-    // border-bottom: 1px solid #EEEEEE;
-    // font-size: 13px;
-    // line-height: 15px;
-    // margin-bottom: 8px;
-    // padding-bottom: 8px;
-    a {
-      // padding-left: 10px;
-    }
 
+  li {
     i { color: #34495E; }
   }
 }
